<resources>
    <string name="app_name">RestaurantManagement</string>
    <string name="name_text">Name:</string>
    <string name="course_rating">RestaurantManagement</string>
    <string name="person_name_text">Person Name</string>
    <string name="roles_text">Roles</string>
    <string name="status_text">Status</string>
    <string name="position_text">Position:</string>
    <string name="username_text">Username</string>
    <string name="placeholder_text">placeholder</string>
    <string name="password_text">Password</string>
    <string name="sign_in_text">Sign in</string>
    <string name="logout_text">Log out</string>
    <string name="cancel_text">Cancel</string>
    <string name="create_text">Create</string>
    <string name="confirm_text">Confirm</string>
    <string name="owner_text">Owner Function</string>
    <string name="admin_text">Admin Function</string>
    <string name="manager_text">Manager Function</string>
    <string name="staff_text">Staff Function</string>
    <string name="customer_text">Customer Function</string>

    <string name="foodTitle">Curry</string>
    <string name="foodPrice">$10</string>
    <string name="foodDesc">A curry is a dish with a sauce seasoned with spices, mainly associated with South Asian cuisine.</string>
    <string name="checkOut">Checkout Cart</string>
    <string name="coupon">Enter Coupon Code</string>
    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="summaryTitle">↓</string>

    <string name="create_acc_text">Create account</string>
        <string name="status_dropdown_list">Status</string>
        <string-array name="status">
            <item>Active</item>
            <item>Suspended</item>
        </string-array>

        <string name="roles_dropdown_list">Roles</string>
    <string name="to_go_owner_homepage">To go owner homepage</string>
    <string name="change_customer">Change Customer</string>
    <string name="manage_food_menu">Manage Food Menu</string>
    <string name="manage_coupon">Manage Coupon</string>
    <string name="edit">Edit</string>
    <string name="create_food_item">Create Food Item</string>
    <string name="price">Price</string>
    <string name="food_name">Food Name</string>
    <string name="food_description">Food Description</string>
    <string name="create_coupon">Create Coupon</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="description">Description</string>
    <string name="discount_percentage">Discount Percentage</string>
    <string name="search">Search</string>
    <string name="submit_order">Pay and submit order</string>
    <string name="delete">Delete</string>
    <string name="manage_order">Manage Order</string>
    <string name="order_food">Order Food</string>
    <string name="view_unfulfilled">View Unfulfilled</string>
    <string name="view_fulfilled">View Fulfilled</string>
    <string name="view_order">View Order</string>
    <string name="mark_fulfilled">Mark Fulfilled</string>
    <string name="edit_order">Edit order</string>
    <string name="stimulate_data">Stimulate Data</string>
    <string-array name="roles">
            <item>Owner</item>
            <item>Admin</item>
            <item>Manager</item>
            <item>Staff</item>
            <item>Customer</item>
        </string-array>
    <string-array name="year">
        <item>Year</item>
        <item>Month</item>
        <item>Day</item>
    </string-array>
    <string-array name="filterby">
        <item>View spending pattern</item>
        <item>View frequency of visit</item>
        <item>View preference</item>
        <item>View earning</item>
    </string-array>
</resources>