<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/foodTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/foodTitle"
            android:textColor="@color/secondary_mid"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/foodDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/foodTitle"
            android:layout_margin="10dp"
            android:drawablePadding="2dp"
            android:text="@string/foodDesc" />

        <TextView
            android:id="@+id/foodPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/foodDesc"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/foodPrice"
            android:textColor="@color/secondary_mid"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/itemCountMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/foodPrice"
            android:orientation="horizontal"
            android:padding="5dp"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/adminTopMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/foodQuantity"
                    android:textSize="40sp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:drawablePadding="2dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/buttonMenu"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/increaseBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:text="@string/up"
                    android:layout_marginHorizontal="5dp"/>
                <Button
                    android:id="@+id/decreaseBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:text="@string/down"
                    android:layout_marginHorizontal="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
