<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:id="@+id/login_grp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="3">
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">
        <Button
            android:id="@+id/admin_btn"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/admin_text"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/manager_btn"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/manager_text"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_margin="5dp"/>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/staff_btn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/staff_text"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/customer_btn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/customer_text"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_margin="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/owner_btn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/owner_text"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_margin="5dp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>