<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".staff.Boundary.StaffView"
    android:id="@+id/manager_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="3">
        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/orderFoodBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/order_food"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/manageOrderBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/manage_order"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_margin="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/logout_btn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/logout_text"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>